# internal/controller/business_group_handler.go
@@ -2,6 +2,7 @@ package controller
 
 import (
 	"github.com/labstack/echo/v4"
+	"github.com/nsqio/go-nsq"
 	"go-starter/internal/service"
 	"go-starter/utils"
 	"net/http"
@@ -10,14 +11,17 @@ import (
 
 type BusinessGroupController struct {
 	BusinessGroupService service.BusinessGroupService
+	producer *nsq.Producer
 }
 
-func InitBusinessGroupController(e *echo.Echo, groupService service.BusinessGroupService) {
+func InitBusinessGroupController(e *echo.Echo, groupService service.BusinessGroupService, producer *nsq.Producer) {
 	controller := &BusinessGroupController{
 		BusinessGroupService: groupService,
+		producer: producer,
 	}
 	g := e.Group("/business_groups")
 	g.GET("/:id", controller.GetByID)
+	g.GET("/producer", controller.TestProduce)
 }
 
 // GetByID godoc
@@ -44,4 +48,26 @@ func (b *BusinessGroupController) GetByID(c echo.Context) error {
 		return c.JSON(utils.GetStatusCode(err), ResponseError{Message: err.Error()})
 	}
 	return c.JSON(http.StatusOK, SimpleResponse{Data: bg, Message: "success"})
+}
+
+// GetByID godoc
+// @Summary 测试 NSQ Producer
+// @Description 测试 NSQ Producer
+// @Tags BusinessGroup
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Header 200 {string} Token "qwerty"
+// @Success 200 {object} SimpleResponse{data=string} "操作信息"
+// @Failure 400,401,404 {object} ResponseError
+// @Failure 500 {object} ResponseError
+// @Router /business_groups/producer [get]
+func (b *BusinessGroupController) TestProduce(c echo.Context) error {
+	str := "hello-test"
+	if err := b.producer.Publish("hello.test.topic", []byte(str)); err != nil {
+		return c.JSON(http.StatusInternalServerError, ResponseError{
+			Message: err.Error(),
+		})
+	}
+	return c.JSON(http.StatusOK, SimpleResponse{Message: "success"})
 }
